Resolves: fdo#48039 use same algorithm for assigning get/set replacement ids

i.e. use the same algorithm for assigning replacement ids for both get and set
exp fields.

Otherwise, consider for ex.
1. fields exists with ids of 1 and 2 in master document
2. a field exists with id of 1 in subdocument and must be reassigned a new
id to not collide with the pre existing master ids

In get orig algorithm assigned first unused slot of master to subdocument field
i.e. 0 unused in master, so subdocument:1 converted to master:0

In set orig algorithm sorted all used master slots and assigned largest used id
plus 1 (therefore unused) to subdocument field i.e. largest id used in master is
2, so subdocument:1 converted to master:3

so get can't find set and error's out with:
Error: Reference source not found

Change-Id: Ie8758dc22cf8deeeeff079532284e57eeaf4a9bd